ottimizza il footer migliorando la formattazione, aggiungendo ombre e outline per il debug, e aggiornando le dimensioni per la responsività

--- a/assets/styles/uni-style.css
+++ b/assets/styles/uni-style.css
@@ -118,7 +118,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     }
 
     @media screen and (max-width: 480px) {
-        bod, #typing-effect, #typing-container {
+        body, #typing-effect, #typing-container {
             font-size: 0.7rem;
         }
         #footer-banner {
