--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -162,9 +162,15 @@ footer {
     text-align: center;
     padding: var(--foot-margin);
     font-size: 0.8rem;
-    box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.3); ————   OG BOXSHA*/
     font-family: var(--std-font);
     line-height: 1.4;
+
+    box-shadow: 0 -2px 10px #00000024,
+                    -10px 0 300px 50px #000000,
+                    10px 0 300px 50px #000000,
+                    0 10px 100px 70px #000000;     
+
     outline: 1px solid #00bbff; /* Debug */
 }
 
@@ -187,6 +193,7 @@ footer {
     font-family: var(--std-font);
     font-size: 0.9rem;
     line-height: 1.4;
+
     outline: 1px solid #ff00ff; /* Debug */
 }
 
@@ -270,9 +277,13 @@ footer {
 
 /* --- Responsive Design --- */
 @media screen and (min-width: 1440px) {
+    body, #typing-effect, #typing-container {
+        font-size: 1.8rem;
+    }
+    
     footer {
-        font-size: 1.3rem;
-        padding: 1.3rem;
+        font-size: 1.1rem;
+        padding: 1.1rem;
     }
 
     #footer-links {
@@ -282,6 +293,13 @@ footer {
 }
 
 @media screen and (max-width: 1024px) {
+    body, #typing-effect, #typing-container  {
+        font-size: 1.2rem;
+        padding: 1.2rem; 
+        margin: 0; 
+        padding-bottom: 5rem; 
+    }
+
     footer {
         font-size: 0.9rem;
         padding: 1rem;
@@ -293,6 +311,10 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
+    body, #typing-effect, #typing-container  {   
+        font-size: 0.9rem; 
+    }
+
     footer {
         font-size: 0.8rem;
         padding: 0.8rem;
@@ -304,6 +326,9 @@ footer {
 }
 
 @media screen and (max-width: 480px) {
+    body, #typing-effect, #typing-container {
+        font-size: 0.8rem;
+    }
     footer {
         font-size: 0.75rem;
         padding: 0.5rem;
