--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -166,12 +166,12 @@ footer {
     font-family: var(--std-font);
     line-height: 1.4;
 
-    box-shadow: 0 -2px 10px #00000024,
+    box-shadow: 0 -2px 10px #00ff00cc,
                     -10px 0 300px 50px #000000,
                     10px 0 300px 50px #000000,
                     0 10px 100px 70px #000000;     
 
-    outline: 1px solid #00bbff; /* Debug */
+    outline: 1px solid #24242424; /* (NO MORE Debug */
 }
 
 /* Footer Banner */
