--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -166,12 +166,12 @@ footer {
     font-family: var(--std-font);
     line-height: 1.4;
 
-    box-shadow: 0 -2px 10px #00ff00cc,
+    box-shadow: 0 -3px 10px #24242424,
                     -10px 0 300px 50px #000000,
                     10px 0 300px 50px #000000,
                     0 10px 100px 70px #000000;     
 
-    outline: 1px solid #24242424; /* (NO MORE Debug */
+    outline: 1px solid #000000; /* (NO MORE Debug */
 }
 
 /* Footer Banner */
@@ -194,7 +194,7 @@ footer {
     font-size: 0.9rem;
     line-height: 1.4;
 
-    outline: 1px solid #ff00ff; /* Debug */
+    outline: 1px solid #000000; /* Debug */
 }
 
 #footer-banner.active {
@@ -229,7 +229,7 @@ footer {
 /* Footer Copyright */
 #footer-copyright {
     margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.4rem;
     font-size: 0.7rem; /* Smaller than links */
     text-align: center;
     color: var(--info-text);
@@ -279,6 +279,7 @@ footer {
 @media screen and (min-width: 1440px) {
     body, #typing-effect, #typing-container {
         font-size: 1.8rem;
+        padding: 1.4rem; 
     }
     
     footer {
@@ -295,7 +296,7 @@ footer {
 @media screen and (max-width: 1024px) {
     body, #typing-effect, #typing-container  {
         font-size: 1.2rem;
-        padding: 1.2rem; 
+       
         margin: 0; 
         padding-bottom: 5rem; 
     }
