--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -93,7 +93,7 @@ main {
 h1, h2, h3 {
     font-family: var(--std-font);
     color: var(--posts);
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.4rem;
 }
 
 h1 {
@@ -105,8 +105,8 @@ h2 {
 }
 
 h3 {
-    font-size: 1.1rem;
-    font-weight: normal;
+    font-size: 1.2rem;
+    font-weight: bold;
 }
 
 /* --- Paragraphs --- */
@@ -213,11 +213,12 @@ footer {
     margin: 0 auto;
     text-align: center;
     font-size: 0.8rem;
+    
 }
 
 #footer-links a {
     text-decoration: none;
-    color: var(--info-text);
+    color: var(--power-color);
     transition: color 0.3s ease;
 }
 
@@ -288,9 +289,9 @@ footer {
         padding: 1rem;
     }
 
-    #footer-links {
+    #footer-links, #footer-copyright {
         font-size: 0.95rem;
-        gap: 1rem;
+        gap: 0.9rem;
     }
 
     #footer-copyright {
@@ -314,7 +315,7 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-    body  #typing-effect, #typing-container {  
+    body,  #typing-effect, #typing-container {  
         font-size: 0.9rem; 
     }
 
@@ -324,8 +325,9 @@ footer {
     }
 
     #footer-links {
-        font-size: 0.8rem;
+        font-size: 0.7rem;
     }
+}
 
 @media screen and (max-width: 480px) {
     body {  /* #typing-effect, #typing-container*/  
@@ -335,7 +337,7 @@ footer {
     #typing-effect, #typing-container {
         font-size: 0.9rem;
     }
-    
+
     footer {
         font-size: 0.75rem;
         padding: 0.5rem;
@@ -343,7 +345,7 @@ footer {
 
     #footer-links {
         font-size: 0.75rem;
-        gap: 0.9rem;
+        gap: 0.8rem;
     }
 }
 
