--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -16,6 +16,7 @@ Advanced-GPT inspiring multidimensional solutions and unlocking creative potenti
 ===============================================================================
 */
 
+
 /* --- Root Variables --- */
 :root {
     /* Base Colors */
@@ -24,26 +25,21 @@ Advanced-GPT inspiring multidimensional solutions and unlocking creative potenti
     --info-text: #f4f4f4;
     --accent: #ffffff;
     --posts: #f4f4f4;
-
     /* Section Colors */
     --live-color: #00bbff;
     --static-color: #ffbbff;
-
     /* Link Colors */
     --power-color: #b0ff0b;
     --hard-color: #ff00ff;
-
     /* Compiler Colors */
     --compiler1-color: #00ff00cc;
     --compiler2-color: #f4f4f4f4;
-
     /* Design Variables */
     --borders: #000000;
     --line-color: #f4f4f480;
     --box-shadow: 0 -2px 10px #24242424;
     --spacing: 2rem;
     --foot-margin: 1rem;
-
     /* Fonts */
     --std-font: "Roboto", sans-serif;
     --mtx-font: "Inconsolata", monospace;
@@ -57,6 +53,11 @@ Advanced-GPT inspiring multidimensional solutions and unlocking creative potenti
     padding: 0;
 }
 
+.main *:last-child {
+    margin-bottom: 3rem;
+}
+
+/* --- Global Styles --- */
 html, body {
     width: 100%;
     height: 100%;
@@ -115,7 +116,7 @@ p {
     font-size: 1rem;
     line-height: 1.5;
     color: var(--info-text);
-    word-wrap: break-word; /* Prevent wrapping into columns */
+    word-wrap: break-word;
 }
 
 p.txt-mini {
@@ -162,16 +163,15 @@ footer {
     text-align: center;
     padding: var(--foot-margin);
     font-size: 0.8rem;
-    /* box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.3); ————   OG BOXSHA*/
     font-family: var(--std-font);
     line-height: 1.4;
-
+    /* box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.3); */
     box-shadow: 0 -3px 10px #24242424,
                     -10px 0 300px 50px #000000,
                     10px 0 300px 50px #000000,
-                    0 10px 100px 70px #000000;     
-
-    outline: 1px solid #000000; /* (NO MORE Debug */
+                    0 10px 100px 70px #000000;
+    /* (NO MORE Debug */  
+    outline: 1px solid #000000;
 }
 
 /* Footer Banner */
@@ -193,8 +193,8 @@ footer {
     font-family: var(--std-font);
     font-size: 0.9rem;
     line-height: 1.4;
-
-    outline: 1px solid #000000; /* Debug */
+    /* No more Debug */
+    outline: 1px solid #000000;
 }
 
 #footer-banner.active {
@@ -208,12 +208,11 @@ footer {
     max-width: 100%;
     display: flex;
     justify-content: center;
-    gap: 0.3rem; /* Adjusted spacing for links */
+    gap: 0.3rem;
     flex-wrap: wrap;
     margin: 0 auto;
     text-align: center;
     font-size: 0.8rem;
-    
 }
 
 #footer-links a {
@@ -231,7 +230,7 @@ footer {
 #footer-copyright {
     margin-top: 0.5rem;
     margin-bottom: 0.4rem;
-    font-size: 0.7rem; /* Smaller than links */
+    font-size: 0.6rem; /* WAS 7 */
     text-align: center;
     color: var(--info-text);
     line-height: 1.4;
@@ -330,7 +329,7 @@ footer {
 }
 
 @media screen and (max-width: 480px) {
-    body {  /* #typing-effect, #typing-container*/  
+    body {   
         font-size: 0.8rem;
     }
 
