--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -137,18 +137,32 @@ p.txt-mini {
 /* --- Links --- */
 a {
     text-decoration: none;
-    color: var(--posts);
-    font-weight: bold;
+    color: var(--accent);
+    font-weight: normal;
 }
 
 a:hover {
-    color: var(--power-color);
+    color: var(--compiler1-color);
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a.imp {
     text-decoration: underline;
+    color: var(--accent);
+    font-weight: normal;
+}
+
+a.imp:hover {
+    text-decoration: none;
+    color: var(--compiler1-color);
+    font-weight: bold;
 }
 
 h1 a {
     position: relative;
     z-index: 10;
+    color: var(--posts);
 }
 
 /* --- Footer --- */
@@ -161,6 +175,9 @@ footer {
     color: var(--info-text);
     text-align: center;
     padding: var(--foot-margin);
+
+    margin-top: 0.6rem;
+
     font-size: 0.8rem;
     font-family: var(--std-font);
     line-height: 1.4;
@@ -217,17 +234,16 @@ footer {
 }
 
 #footer-links a {
-   /**  text-decoration: none;
-    color: var(--accent); **/
+   text-decoration: none;
+    color: var(--info-text);
     transition: color 0.3s ease;
+    font-weight: bold ;
 }
 
- /*
 #footer-links a:hover {
-    color: var(--live-color);
+    color: var(--accent);
     text-decoration: underline;
 }
-**/
 
 .link-live {
     font-weight: bold;
@@ -235,7 +251,7 @@ footer {
 }
 
 #link-live a:hover {
-    color: var(--compiler1-color);
+    color: var(--compiler1-color) !important;
     text-decoration: underline;
 }
 
@@ -243,7 +259,7 @@ footer {
     font-weight: bold;
 }
 #link-static a:hover {
-    color: var(--static-color);
+    color: var(--static-color) !important;
     text-decoration: underline;
 }
 
@@ -304,12 +320,12 @@ footer {
 
     }
     #typing-effect, #typing-container {
-        padding-bottom: 0.3rem;
+        padding-bottom: 0.2rem;
     }
     
     footer {
         font-size: 0.95rem;
-        padding: 1rem;
+        padding: 0.9rem;
     }
 
     #footer-links, #footer-copyright {
@@ -328,12 +344,12 @@ footer {
     }
 
     #typing-effect, #typing-container {
-        padding-bottom: 0.5rem;
+        padding-bottom: 0.3rem;
     }
 
     footer {
-        font-size: 0.9rem;
-        padding: 1rem;
+        font-size: 0.8rem;
+        padding: 0.8rem;
     }
 
     #footer-links {
@@ -359,7 +375,7 @@ footer {
 
     footer {
         font-size: 0.75rem;
-        padding: 0.8rem;
+        padding: 0.7rem;
     }
 
     #footer-links {
