--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -163,6 +163,7 @@ h1 a {
     position: relative;
     z-index: 10;
     color: var(--posts);
+    font-weight: bold;
 }
 
 /* --- Footer --- */
@@ -176,7 +177,7 @@ footer {
     text-align: center;
     padding: var(--foot-margin);
 
-    margin-top: 0.6rem;
+    padding-top: 0.6rem;
 
     font-size: 0.8rem;
     font-family: var(--std-font);
