--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -177,13 +177,13 @@ footer {
     text-align: center;
     padding: var(--foot-margin);
 
-    padding-top: 0.6rem;
+    padding-top: 0.3rem; /* 0.6 */
 
     font-size: 0.8rem;
     font-family: var(--std-font);
     line-height: 1.4;
     /* box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.3); */
-    box-shadow: 0 -3px 10px #24242424,
+    box-shadow: 0 -3px 5px #f4f4f424,    /* -3px 10px #24242424, */
                     -10px 0 300px 50px #000000,
                     10px 0 300px 50px #000000,
                     0 10px 100px 70px #000000;
@@ -339,7 +339,7 @@ footer.no-shadow {
 
     #footer-links, #footer-copyright {
         font-size: 0.95rem;
-        gap: 0.6rem;
+        gap: 0.4rem;
     }
 
     #footer-copyright {
@@ -363,6 +363,7 @@ footer.no-shadow {
 
     #footer-links {
         font-size: 0.85rem;
+        gap: 0.5rem;
     }
 
     #footer-copyright {
