--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -175,12 +175,12 @@ footer {
     font-family: var(--std-font);
     line-height: 1.4;
     /* Box shadow effects */
-    box-shadow: 0 -3px 5px #24242424, 
+    box-shadow: 0 -3px 5px #24242420, 
                 -10px 0 300px 50px #000000,
                 10px 0 300px 50px #000000,
                 0 10px 90px 70px #000000;
     transition: box-shadow 0.3s ease-in-out, opacity 0.3s ease-in-out;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.9);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
 }
@@ -391,7 +391,7 @@ footer.no-shadow {
 
     #typing-effect {
         font-size: 0.9rem;
-        line-height: 1.1rem;
+        /* line-height: 1.1rem; */
     }
 
     footer {
