--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -357,8 +357,8 @@ footer.no-shadow {
     }
 
     #typing-effect {
-        font-size: 1rem;
-        line-height: 1.3rem;
+        font-size: 1.2rem;
+        /* line-height: 1.3rem; */
     }
 
     footer {
@@ -390,7 +390,7 @@ footer.no-shadow {
     }
 
     #typing-effect {
-        font-size: 0.9rem;
+        font-size: 0.1rem;
         /* line-height: 1.1rem; */
     }
 
