--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -302,6 +302,7 @@ footer.no-shadow {
     body, #typing-effect, #typing-container {
         font-size: 1.8rem;
         padding: 1.4rem;
+        padding-bottom: 1.4rem;
     }
 
     footer {
@@ -326,6 +327,7 @@ footer.no-shadow {
 @media screen and (max-width: 1024px) {
     body, #typing-effect, #typing-container {
         font-size: 1.2rem;
+        padding: 1.2rem;
         padding-bottom: 1.2rem;
     }
 
@@ -352,14 +354,10 @@ footer.no-shadow {
 
 /* (max-width: 768px) */
 @media screen and (max-width: 768px) {
-    body {
+    body, #typing-effect, #typing-container  {   
         font-size: 0.9rem;
     }
 
-    #typing-effect {
-        font-size: 1.2rem;
-        /* line-height: 1.3rem; */
-    }
 
     footer {
         font-size: 0.75rem;
@@ -385,13 +383,8 @@ footer.no-shadow {
 
 /* (max-width: 480px) */
 @media screen and (max-width: 480px) {
-    body {
+    body, #typing-effect, #typing-container {
         font-size: 0.8rem;
-    }
-
-    #typing-effect {
-        font-size: 0.1rem;
-        /* line-height: 1.1rem; */
     }
 
     footer {
