--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -360,11 +360,12 @@ footer.no-shadow {
     
     body {
         padding: 1rem;  
-        font-size: 1rem;
+        font-size: 0.9rem;
     }
 
     #typing-effect {   
-        font-size: 1rem;
+        font-size: 1.2rem;
+        line-height: 0.9rem;
     }
 
     footer {
@@ -391,7 +392,7 @@ footer.no-shadow {
 /* (max-width: 480px) */
 @media screen and (max-width: 480px) {
     body {
-        font-size: 0.9rem;
+        font-size: 0.8rem;
     }
 
     footer {
@@ -401,7 +402,8 @@ footer.no-shadow {
     }
 
     #typing-effect {
-        font-size: 0.9rem;
+        font-size: 1rem;
+        line-height: 0.8rem;
     }
 
     #footer-banner {
