--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -353,10 +353,12 @@ footer.no-shadow {
 
 /* (max-width: 768px) */
 @media screen and (max-width: 768px) {
+    /*
     main {
         max-width: 100%;
         padding: 1rem;
     }
+    */
     
     body {
         padding: 1rem;  
@@ -364,9 +366,10 @@ footer.no-shadow {
     }
 
     #typing-effect {   
-        font-size: 1.2rem;
-        line-height: 0.9rem;
+        font-size: 1.3rem;
+        line-height: 0.8rem;
     }
+    
 
     footer {
         font-size: 0.75rem;
@@ -402,8 +405,8 @@ footer.no-shadow {
     }
 
     #typing-effect {
-        font-size: 1rem;
-        line-height: 0.8rem;
+        font-size: 1.1rem;
+        line-height: 0.7rem;
     }
 
     #footer-banner {
