--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -366,7 +366,7 @@ footer.no-shadow {
     }
 
     #typing-effect {   
-        font-size: 1.3rem;
+       /*  font-size: 1.3rem; */
         line-height: 0.8rem;
     }
     
@@ -404,12 +404,11 @@ footer.no-shadow {
         backdrop-filter: blur(8px);
     }
 
-    /*
+    
     #typing-effect {
-        font-size: 1.1rem;
+        /* font-size: 1.1rem; */
         line-height: 0.7rem;
     }
-    */
 
     #footer-banner {
         backdrop-filter: blur(8px);
