aumenta la larghezza del contenitore di digitazione e modifica il padding per migliorare il layout

--- a/assets/styles/animations/compiler.css
+++ b/assets/styles/animations/compiler.css
@@ -23,14 +23,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 /* --- Typing Container --- */
 #typing-container {
-    width: 100%;
+    width: 110%;
     max-width: 100%; /* 1200px; */
     height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     margin: 0 auto;
-    padding: -1rem;
+    padding: -2rem;
     box-sizing: border-box;
     text-align: left;
     transform: translateY(-20%);
