--- a/assets/styles/animations/compiler.css
+++ b/assets/styles/animations/compiler.css
@@ -84,7 +84,7 @@ ORDINE CORRETTO in direzione scrittura
                     }
 
                     #typing-effect {
-                        border: 1px dashed lightgreen; /* Controllo area testo */
+                        border: 1px dashed lemonchiffon; /* Controllo area testo */
                     }
 
 
@@ -115,7 +115,7 @@ ORDINE CORRETTO in direzione scrittura
 
 
     text-align: left; /* Allinea il testo */
-    padding: 0 0;
+    padding: 0 -2rem;
 }
 
 #typing-effect::after {
